@@ -3,5 +3,5 @@
 {:paths ["src" "resources"]
  :deps  {org.clojure/clojure {:mvn/version "1.11.1"}
          camel-snake-kebab/camel-snake-kebab {:mvn/version "0.4.3"}
-         io.opentelemetry/opentelemetry-api {:mvn/version "1.35.0"}
+         io.opentelemetry/opentelemetry-api {:mvn/version "1.36.0"}
          io.opentelemetry.semconv/opentelemetry-semconv {:mvn/version "1.23.1-alpha"}}}
