@@ -2,4 +2,4 @@
 
 {:paths ["src"]
  :deps  {org.clojure/clojure {:mvn/version "1.11.1"}
-         io.opentelemetry.contrib/opentelemetry-aws-xray-propagator {:mvn/version "1.32.0-alpha"}}}
+         io.opentelemetry.contrib/opentelemetry-aws-xray-propagator {:mvn/version "1.33.0-alpha"}}}
