@@ -26,6 +26,7 @@
    |`:x509-trust-manager`              | `^X509TrustManager` \"bring your own SSLContext\" alternative to setting certificate bytes when using TLS.
    |`:compression-method`              | Method used to compress payloads, `\"gzip\"` or `\"none\"` (default: `\"none\"`).
    |`:timeout`                         | Maximum time to wait for export of a batch of spans. Value is either a `Duration` or a vector `[amount ^TimeUnit unit]` (default: 10s).
+   |`:connect-timeout`                 | Maximum time to wait for new connections to be established. Value is either a `Duration` or a vector `[amount ^TimeUnit unit]` (default: 10s).\n\n
    |`:retry-policy`                    | Option map for retry policy, see `steffan-westcott.clj-otel.sdk.export/retry-policy` (default: retry disabled).
    |`:aggregation-temporality-selector`| Function which takes an `InstrumentType` and returns an `AggregationTemporality` (default: same as constantly `AggregationTemporality/CUMULATIVE`).
    |`:default-aggregation-selector`    | Function which takes an `InstrumentType` and returns default `Aggregation` (default: same as `DefaultAggregationSelector/getDefault`)."
@@ -33,7 +34,7 @@
    (metric-exporter {}))
   (^OtlpGrpcMetricExporter
    [{:keys [endpoint headers trusted-certificates-pem client-private-key-pem client-certificates-pem
-            ssl-context x509-trust-manager compression-method timeout retry-policy
+            ssl-context x509-trust-manager compression-method timeout connect-timeout retry-policy
             aggregation-temporality-selector default-aggregation-selector]}]
    (let [builder
          (cond-> (OtlpGrpcMetricExporter/builder)
@@ -46,6 +47,7 @@
            (and ssl-context x509-trust-manager) (.setSslContext ssl-context x509-trust-manager)
            compression-method (.setCompression compression-method)
            timeout (.setTimeout (util/duration timeout))
+           connect-timeout (.setConnectTimeout (util/duration connect-timeout))
            retry-policy (.setRetryPolicy (export/retry-policy retry-policy))
            aggregation-temporality-selector (.setAggregationTemporalitySelector
                                              (reify
