@@ -27,13 +27,14 @@
    |`:timeout`                         | Maximum time to wait for export of a batch of spans. Value is either a `Duration` or a vector `[amount ^TimeUnit unit]` (default: 10s).
    |`:connect-timeout`                 | Maximum time to wait for new connections to be established. Value is either a `Duration` or a vector `[amount ^TimeUnit unit]` (default: 10s).
    |`:retry-policy`                    | Option map for retry policy, see `steffan-westcott.clj-otel.sdk.export/retry-policy` (default: retry disabled).
+   |`:proxy-options`                   | Option map for proxy options, see `steffan-westcott.clj-otel.sdk.export/proxy-options` (default: no proxy used).\n
    |`:aggregation-temporality-selector`| Function which takes an `InstrumentType` and returns an `AggregationTemporality` (default: constantly `AggregationTemporality/CUMULATIVE`)."
   (^OtlpHttpMetricExporter []
    (metric-exporter {}))
   (^OtlpHttpMetricExporter
    [{:keys [endpoint headers trusted-certificates-pem client-private-key-pem client-certificates-pem
             ssl-context x509-trust-manager compression-method timeout connect-timeout retry-policy
-            aggregation-temporality-selector]}]
+            proxy-options aggregation-temporality-selector]}]
    (let [builder (cond-> (OtlpHttpMetricExporter/builder)
                    endpoint (.setEndpoint endpoint)
                    headers (add-headers headers)
@@ -47,6 +48,7 @@
                    timeout (.setTimeout (util/duration timeout))
                    connect-timeout (.setConnectTimeout (util/duration connect-timeout))
                    retry-policy (.setRetryPolicy (export/retry-policy retry-policy))
+                   proxy-options (.setProxyOptions (export/proxy-options proxy-options))
                    aggregation-temporality-selector
                    (.setAggregationTemporalitySelector
                     (reify
