@@ -27,13 +27,14 @@
    |`:timeout`                 | Maximum time to wait for export of a batch of spans. Value is either a `Duration` or a vector `[amount ^TimeUnit unit]` (default: 10s).
    |`:connect-timeout`         | Maximum time to wait for new connections to be established. Value is either a `Duration` or a vector `[amount ^TimeUnit unit]` (default: 10s).
    |`:retry-policy`            | Option map for retry policy, see `steffan-westcott.clj-otel.sdk.export/retry-policy` (default: retry disabled).
+   |`:proxy-options`           | Option map for proxy options, see `steffan-westcott.clj-otel.sdk.export/proxy-options` (default: no proxy used).
    |`:meter-provider`          | ^MeterProvider to collect metrics related to export (default: metrics not collected)."
   (^OtlpHttpSpanExporter []
    (span-exporter {}))
   (^OtlpHttpSpanExporter
    [{:keys [endpoint headers trusted-certificates-pem client-private-key-pem client-certificates-pem
             ssl-context x509-trust-manager compression-method timeout connect-timeout retry-policy
-            ^MeterProvider meter-provider]}]
+            proxy-options ^MeterProvider meter-provider]}]
    (let [builder (cond-> (OtlpHttpSpanExporter/builder)
                    endpoint (.setEndpoint endpoint)
                    headers (add-headers headers)
@@ -47,5 +48,6 @@
                    timeout (.setTimeout (util/duration timeout))
                    connect-timeout (.setConnectTimeout (util/duration connect-timeout))
                    retry-policy (.setRetryPolicy (export/retry-policy retry-policy))
+                   proxy-options (.setProxy (export/proxy-options proxy-options))
                    meter-provider (.setMeterProvider meter-provider))]
      (.build builder))))
