@@ -3,6 +3,6 @@
 {:paths ["src"]
  :deps  {org.clojure/clojure {:mvn/version "1.11.1"}
          io.opentelemetry.instrumentation/opentelemetry-resources
-         {:mvn/version "2.1.0-alpha"
+         {:mvn/version "2.2.0-alpha"
           :exclusions  [io.opentelemetry.instrumentation/opentelemetry-instrumentation-api
                         io.opentelemetry.instrumentation/opentelemetry-instrumentation-api-semconv]}}}
