@@ -709,8 +709,8 @@ For an example application `my-app` that exports traces only using OTLP over gRP
                      "-Dotel.metrics.exporter=none"
                      "-Dotel.logs.exporter=none"
                      "-Dotel.exporter.otlp.traces.protocol=grpc"]
-          :extra-deps {io.opentelemetry/opentelemetry-exporter-otlp               {:mvn/version "1.35.0"}
-                       io.opentelemetry.instrumentation/opentelemetry-resources   {:mvn/version "2.1.0-alpha"}
+          :extra-deps {io.opentelemetry/opentelemetry-exporter-otlp               {:mvn/version "1.36.0"}
+                       io.opentelemetry.instrumentation/opentelemetry-resources   {:mvn/version "2.2.0-alpha"}
                        io.grpc/grpc-netty-shaded                                  {:mvn/version "1.61.0"}
                        io.grpc/grpc-protobuf                                      {:mvn/version "1.61.0"}
                        io.grpc/grpc-stub                                          {:mvn/version "1.61.0"}}}}}
