@@ -24,10 +24,10 @@
            {:local/root "../../../../../clj-otel-instrumentation-runtime-telemetry-java17"}
 
            ;; OpenTelemetry exporter that uses OTLP
-           io.opentelemetry/opentelemetry-exporter-otlp {:mvn/version "1.35.0"}
+           io.opentelemetry/opentelemetry-exporter-otlp {:mvn/version "1.36.0"}
 
            ;; Automatically adds OpenTelemetry resources to exported telemetry
-           io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "2.1.0-alpha"}
+           io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "2.2.0-alpha"}
 
            ;; Reitit HTTP router
            metosin/reitit-malli {:mvn/version "0.7.0-alpha7"}
